git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@869 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.yml
+++ b/config/locales/fr-FR.yml
@@ -1067,6 +1067,7 @@ fr-FR:
           one: '1 contact'
           other: '{{count}} contacts'
         entities_contacts_create: 'Ajouter un nouveau contact'
+        entities_print: Imprimer la fiche
         entities_update: Modifier la fiche
         invoices:
           zero: Aucune facture
