git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@870 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.yml
+++ b/config/locales/fr-FR.yml
@@ -586,6 +586,7 @@ fr-FR:
         nature_id: Type 
         planned_on: Prévu le
         shape_id: Îlot
+        validated: Effectué
       shape_operation_nature:
         name: Nom
         description: Description
@@ -1415,6 +1416,7 @@ fr-FR:
     format_date:
       iso: "(AAAA-MM-JJ)"
     hint: 'Astuce&nbsp;: {{value}}'
+    indicator: 'Tableau de bord'
     info: 'Information&nbsp;: {{value}}'
     n: non
     next: Suivant
