git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@873 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.yml
+++ b/config/locales/fr-FR.yml
@@ -286,6 +286,7 @@ fr-FR:
         created_on: Crée le
         mode_id: Type de paiement
         payments_number: Nombre de chèque
+        validated: Valider
       employee:
         title: Fonction
         first_name: Nom
