--- a/config/locales/fr-FR/help/company-users_update.txt
+++ b/config/locales/fr-FR/help/company-users_update.txt
@@ -2,3 +2,5 @@ h1. Comment modifier un utilisateur?
 
 Il vous suffit de modifier les champs que vous désirez, vous pouvez le faire pour des champs déjà renseignés ou pour des champs qui ne le sont pas encore.
 Vous pouvez *cocher ou décocher les différents droits* utilisateurs afin d'*autoriser* ou de *restreindre l'accès* à différentes parties du logiciel.
+
+La *modification des droits d'un utilisateur* ne sera *effective* qu'*à la prochaine connexion* de celui-ci.
