git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@910 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.yml
+++ b/config/locales/fr-FR.yml
@@ -233,6 +233,7 @@ fr-FR:
         name: Nom
         value: Valeur
       contact:
+        area_id: Zone
         country: Pays
         fax: Fax
         mobile: Portable
